# fat32-parser

./: Cargo.toml  README.md  rust-toolchain.toml
src/: allocator.rs  block_device.rs  boot_sector.rs  dir_entry.rs  error.rs  fat.rs  filesystem.rs  lib.rs
